--- a/test.html
+++ b/test.html
@@ -1,18 +1,10 @@
----
-layout: about
-title: About
-menu: true
-order: 10
----
-
-## 소개
-
-산업인력공단에서 주최하는 지방기능경기대회, 전국기능경기대회에서 각각 3위(동), 2위(은)을 입상하였고, 웹 디자인 및 개발 국가대표 선발전에 출전하였고,
-아시아기능경기대회(Asiaskills) 웹 디자인 및 개발 부분에 국가대표로 출전하였습니다. 현재는 javascript의 라이브러리 React, Vue와 같은 최신 프론트엔드 라이브러리에 관심을 가지고있습니다.
-
-## 약력
-
-- 2018 전국기능경기대회 웹 디자인 및 개발 2위
-- 2018 지방기능경기대회 웹 디자인 및 개발 3위
-- 2019 러시아 카잔 국제올림픽 국가대표 선발전 웹 디자인 및 개발 출전
-- 2018 아시아기능경기대회 웹 디자인 및 개발 출전
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<title>Document</title>
+</head>
+<body>
+	asdasd
+</body>
+</html>
