--- a/fruitsPang.html
+++ b/fruitsPang.html
@@ -2,9 +2,8 @@
 <html>
 <head>
 <meta charset="utf-8">
-<base href="portfolio_asset/fruitsPang">
-<link rel="stylesheet" type="text/css" href="css/style.css">
-<link rel="stylesheet" type="text/css" href="css/aniamte.css">
+<link rel="stylesheet" type="text/css" href="/portfolio_asset/fruitsPang/css/style.css">
+<link rel="stylesheet" type="text/css" href="/portfolio_asset/fruitsPang/css/aniamte.css">
 <title>Untitled Document</title>
 </head>
 
@@ -74,16 +73,16 @@
 	
 	<!--Scripts-->
 	<!-- <script type="text/javascript" src="js/test.js"></script> -->
-	<script type="text/javascript" src="js/jquery-3.2.0.js"></script>
-	<script type="text/javascript" src="js/helpers.js"></script>
-	<script type="text/javascript" src="js/View.js"></script>
-	<script type="text/javascript" src="js/GameBoard.js"></script>
-	<script type="text/javascript" src="js/Game.js"></script>
-	<script type="text/javascript" src="js/Event.js"></script>
-	<script type="text/javascript" src="js/ActiveItem.js"></script>
-	<script type="text/javascript" src="js/BoardItem.js"></script>
-	<script type="text/javascript" src="js/Fruit.js"></script>
-	<script type="text/javascript" src="js/Config.js"></script>
-	<script type="text/javascript" src="js/script.js"></script>
+	<script type="text/javascript" src="/portfolio_asset/fruitsPang/js/jquery-3.2.0.js"></script>
+	<script type="text/javascript" src="/portfolio_asset/fruitsPang/js/helpers.js"></script>
+	<script type="text/javascript" src="/portfolio_asset/fruitsPang/js/View.js"></script>
+	<script type="text/javascript" src="/portfolio_asset/fruitsPang/js/GameBoard.js"></script>
+	<script type="text/javascript" src="/portfolio_asset/fruitsPang/js/Game.js"></script>
+	<script type="text/javascript" src="/portfolio_asset/fruitsPang/js/Event.js"></script>
+	<script type="text/javascript" src="/portfolio_asset/fruitsPang/js/ActiveItem.js"></script>
+	<script type="text/javascript" src="/portfolio_asset/fruitsPang/js/BoardItem.js"></script>
+	<script type="text/javascript" src="/portfolio_asset/fruitsPang/js/Fruit.js"></script>
+	<script type="text/javascript" src="/portfolio_asset/fruitsPang/js/Config.js"></script>
+	<script type="text/javascript" src="/portfolio_asset/fruitsPang/js/script.js"></script>
 </body>
 </html>
