--- a/portfolio.html
+++ b/portfolio.html
@@ -61,7 +61,7 @@
 				<div class="page2_container">
 					<div class="typo">
 						<div class="myimage" data-delay="0.4s" data-duration="0.5s">
-							<img src="assets/imgs/me.png" alt="me" title="me">
+							<img src="/portfolio_asset/0/assets/imgs/me.png" alt="me" title="me">
 						</div>
 					</div>
 					<div class="typo">
